force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/HDT_MassiveFieldsObjectMap__mdt.object-meta.xml
<CustomObject>
    <label>Massive Fields Object Map</label>
    <pluralLabel>Massive Fields Object Map</pluralLabel>
</CustomObject>