force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/fields/labelField__c.field-meta.xml
<CustomField>
    <fullName>labelField__c</fullName>
    <label>labelField</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>