force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/fields/nameField__c.field-meta.xml
<CustomField>
    <fullName>nameField__c</fullName>
    <label>nameField</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>