force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <label>objectType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>