force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/fields/processType__c.field-meta.xml
<CustomField>
    <fullName>processType__c</fullName>
    <label>processType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>