force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/listViews/Chiusura_Massiva_Activity.listView-meta.xml
<ListView>
    <fullName>Chiusura_Massiva_Activity</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>labelField__c</columns>
    <columns>nameField__c</columns>
    <columns>objectType__c</columns>
    <columns>processType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>CloseActivity</value>
    </filters>
    <label>Chiusura Massiva Activity</label>
    <language>en_US</language>
</ListView>