force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/listViews/Chiusura_Order_Case.listView-meta.xml
<ListView>
    <fullName>Chiusura_Order_Case</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>labelField__c</columns>
    <columns>nameField__c</columns>
    <columns>objectType__c</columns>
    <columns>processType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>ChiusuraOrdCase_</value>
    </filters>
    <label>Chiusura Order Case</label>
    <language>en_US</language>
</ListView>