force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/listViews/Sales.listView-meta.xml
<ListView>
    <fullName>Sales</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>labelField__c</columns>
    <columns>nameField__c</columns>
    <columns>objectType__c</columns>
    <columns>processType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>Sales</value>
    </filters>
    <label>Sales</label>
    <language>en_US</language>
</ListView>