force-app/main/default/objects/HDT_MassiveFieldsObjectMap__mdt/listViews/VolturaTecnica.listView-meta.xml
<ListView>
    <fullName>VolturaTecnica</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>labelField__c</columns>
    <columns>nameField__c</columns>
    <columns>objectType__c</columns>
    <columns>processType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>processType__c</field>
        <operation>equals</operation>
        <value>VolturaTecnica</value>
    </filters>
    <label>Voltura Tecnica</label>
    <language>en_US</language>
</ListView>